@startuml Mapa

class Mapa{
    +Mapa(informacionMapa: InformacionMapa)
    -obtenerCasillero(posicion: int): Casillero
    +obtenerProximoDestino(casillero: Casillero, posicionAMover: int): Casillero
    +ubicarEnInicio(jugador: Jugador)
    +ubicarEnMitadDelCamino(jugador: Jugador)
    +jugadorGano(jugador: Jugador): boolean
    +getCasilleros(): LinkedList<Casillero>
}

class Casillero{
    #x: int
    #y: int
    +Casillero(x: int, y: int)
    +recibirElemento(elemento: Interactuable)
    +entregarElementos(jugador: Jugador)
    +esIgualQue(casillero: Casillero): boolean
}

interface Interactuable{
    +{abstract} interactuar(jugador: Jugador)
}

interface InformacionMapa{
    +{abstract} construirCamino(casilleros: LinkedList<Casillero>)
}



Mapa "1" --> "*" Casillero

Casillero "1" --> "*" Interactuable

Mapa ..> InformacionMapa


@enduml